--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
-            width: 100vw;
+            max-width: 100vw;
             height: 100vh;
             text-align: center;
+            overflow-x: hidden;
+
         }
 
         #nameInput {
