--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
             margin-bottom: 20px;
         }
         
-        h1{
+        .title-container h1{
+            margin: 10px auto;
+            text-shadow: 1px 1px 15px #f0f0f0;
+        }
+
+        .title-container h2{
             margin: 10px auto;
             text-shadow: 1px 1px 15px #f0f0f0;
         }
@@ -120,6 +125,7 @@
 
     <div class="title-container">
         <h1></h1>
+        <h2>Não sou bom com textões, mas aí vai um: Parabéns!</h2>
     </div>
     <div id="videoList" class="video-container"></div>
 
